--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
     <a href="docs.oplogexpress.design">Docs</a>
     <a href="storybook.oplogexpress.design">Storybook</a>
 </body>
-</html>>
+</html>
