add http to links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Welcome to oplogexpress Website!</h1>
     <p>Click links below to navigate Docs and Storybook.</p>
-    <a href="docs.oplogexpress.design">Docs</a>
-    <a href="storybook.oplogexpress.design">Storybook</a>
+    <a href="http://docs.oplogexpress.design">Docs</a>
+    <a href="http://storybook.oplogexpress.design">Storybook</a>
 </body>
 </html>
