--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="container-sm">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0 is-revealing">Welcome to oplogexpress Website!</h1>
-	                        <p class="hero-paragraph is-revealing">To view the storybook and docs simply click the buttons below.</p>
+	                        <h1 class="hero-title mt-0 is-revealing">Welcome to oplogexpress!</h1>
+	                        <p class="hero-paragraph is-revealing">To view the docs and storybook simply click the buttons below.</p>
 	                        <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="http://docs.oplogexpress.design">Docs</a><a class="button button-secondary button-shadow" href="http://storybook.oplogexpress.design" style="margin-left: 20px;">Storybook</a></p>
 						</div>
 						<div class="hero-illustration is-revealing">
