Title and team name added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Grace Template</title>
+    <title>OPLOGExpress</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|PT+Sans:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -59,9 +59,10 @@
                 <div class="container-sm">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0 is-revealing">Welcome to oplogexpress!</h1>
+                            <h1 class="hero-title mt-0 is-revealing">Welcome to OPLOGExpress!</h1>
 	                        <p class="hero-paragraph is-revealing">To view the docs and storybook simply click the buttons below.</p>
-	                        <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="http://docs.oplogexpress.design">Docs</a><a class="button button-secondary button-shadow" href="http://storybook.oplogexpress.design" style="margin-left: 20px;">Storybook</a></p>
+                            <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="http://docs.oplogexpress.design">Docs</a><a class="button button-secondary button-shadow" href="http://storybook.oplogexpress.design" style="margin-left: 20px;">Storybook</a></p>
+                            <p><i><small>Made by Picasso Team on OPLOG</small></i></p>
 						</div>
 						<div class="hero-illustration is-revealing">
                             <svg width="800" height="520" viewBox="0 0 800 520" xmlns="http://www.w3.org/2000/svg">
