OPLOG link added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <h1 class="hero-title mt-0 is-revealing">Welcome to OPLOGExpress!</h1>
 	                        <p class="hero-paragraph is-revealing">To view the docs and storybook simply click the buttons below.</p>
                             <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="http://docs.oplogexpress.design">Docs</a><a class="button button-secondary button-shadow" href="http://storybook.oplogexpress.design" style="margin-left: 20px;">Storybook</a></p>
-                            <p><i><small>Made by Picasso Team on OPLOG</small></i></p>
+                            <p><i><small>Made by Picasso Team <a href="http://oplog.com.tr">@OPLOG</a></small></i></p>
 						</div>
 						<div class="hero-illustration is-revealing">
                             <svg width="800" height="520" viewBox="0 0 800 520" xmlns="http://www.w3.org/2000/svg">
